--- a/index.html
+++ b/index.html
@@ -1,14 +1,103 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>The Cat Shop</title>
+    <meta charset="UTF-8" />
+    <title>Copy Cat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div>
-      <header></header>
-      <main></main>
-      <footer></footer>
+      <header>
+        <h1 class="logo">The Cat Shop</h1>
+        <nav>
+          <ul class="navbar">
+            <li class="nav-item">
+              <a href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#cats">Cats</a>
+            </li>
+            <li class="nav-item">
+              <a href="#products">Products</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about">About</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="container">
+        <section id="home" class="hero">
+          <div class="hero-image">
+            <img src="images/wallpaper-cat.jpg" alt="Wallpaper Cat" />
+          </div>
+          <div class="hero-content">
+            <h2>Meowcome to our site!</h2>
+          </div>
+        </section>
+        <section id="cats" class="call-to-action">
+          <h3>Cats</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias itaque quaerat, fugiat illo fugit expedita ullam voluptatibus dolorum illum ratione eum impedit totam minima nam magni quia nisi hic nostrum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sint quos mollitia, odio beatae at cum ipsa, provident laudantium libero quidem animi magni placeat consectetur omnis nihil illo repellendus laborum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ipsa illo perferendis ullam distinctio amet, repudiandae tenetur praesentium optio eum sequi, accusantium itaque iure laboriosam facilis modi culpa nisi ipsum!
+          </p>
+        </section>
+        <section id="products" class="products">
+          <h3>Products</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate temporibus ipsa eligendi consequatur soluta, repudiandae reiciendis ipsum, alias earum, beatae aliquam ratione quos dicta! Labore cum optio nihil earum, quaerat.
+          </p>
+          <ul class="product-wrapper">
+            <li class="product-item">
+              <img src="images/thankful-cats.jpg" alt="Thankful Cats">
+            </li>
+            <li class="product-item">
+              <img src="images/bake-cats.jpg" alt="Baking Cats">
+            </li>
+            <li class="product-item">
+              <img src="images/dance-cats.gif" alt="Dancing Cats">
+            </li>
+            <li class="product-item">
+              <img src="images/icecream-cat.gif" alt="Ice Cream Cats">
+            </li>
+            <li class="product-item">
+              <img src="images/eat-cats.jpg" alt="Eating Cats">
+            </li>
+          </ul>
+        </section>
+        <section id="about" class="about">
+          <div class="team">
+            <div class="team-fun">
+              <h3>Fun</h3>
+            </div>
+            <div class="team-values">
+              <h3>Values</h3>
+            </div>
+            <div class="team-meow">
+              <h3>Meow</h3>
+            </div>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora magni, recusandae dicta quasi fuga impedit natus vitae autem id, sunt hic eligendi labore voluptate soluta? Sequi dolores quidem illo similique!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat earum dignissimos at, nam ipsum harum, quod doloribus ea in ab minus, est eaque vel et libero quia fugiat ex eligendi!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ullam necessitatibus voluptas repellendus quaerat, tempore voluptate molestias libero corrupti, magni in, quae debitis iure at unde eius officiis! Iure, veniam.
+          </p>
+        </section>
+      </main>
+      <footer>
+        &copy; Meow 2016
+      </footer>
     </div>
   </body>
 </html>
